# lhd032

password-vault/: .gitignore  index.html  package-lock.json  package.json
password-vault/src/: App.vue  main.js  style.css
password-vault/src-tauri/: Cargo.toml  tauri.conf.json
password-vault/src-tauri/capabilities/: default.json
password-vault/src-tauri/src/: commands.rs  crypto.rs  hibp.rs  main.rs  storage.rs
password-vault/src/components/: CategoryNav.vue  EntryCard.vue  EntryForm.vue  MainInterface.vue  SettingsDialog.vue  UnlockPage.vue
