[package]
name = "password-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ring = "0.17"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
sha1 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
hex = "0.4"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
flate2 = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
